ingresses/ingress_apps.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "simple-web-app.com"
      http:
        paths:
          - pathType: Exact
            path: /app1
            backend:
              service:
                name: service-app1
                port:
                  number: 80
          - pathType: Exact
            path: /app2
            backend:
              service:
                name: service-app2
                port:
                  number: 80
          - pathType: Prefix
            path: /
            backend:
              service:
                name: service-apps
                port:
                  number: 80
